<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="app_name">0Pizzaria</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="hello">Lazy Image Download In ListView</string>
    <string name="header_name">Usêrnâme Lastnàmê</string>
    <string name="header_phone">91234 5678</string>
    <string name="callPhone"></string>
    <string name="profileThumbnail"></string>
    <string name="profileThumbnailBorder"></string>
    <string name="profileCover"></string>
    <string name="profileUsername"></string>
    <string name="profileUserphone"></string>
    <string name="buttonUpdate"></string>
    <string name="Loading">Load</string>
    <string name="load">load</string>
    <string name="seguir">seguir</string>
    <string name="action_refresh">atualizar</string>
    <string name="Refresh_cache">Refresh cache</string>    
    <string name="Perfil">Perfil</string>
    <string name="Idade">Idade</string>
    <string name="unit01">anos</string>
    <string name="Altura">Altura</string>
    <string name="unit02">m</string>
    <string name="Peso">Peso</string>
    <string name="unit03">kg</string>
    <string name="Fotos">Fotos</string>
    <string name="Agenda">Agenda</string>
    <string name="Anal">Anal</string>
    <string name="Price">Preço</string>
    <string name="gpPay">Pagamentos</string>
    <string name="fire">fire</string>
    <string name="cancel">Cancel</string>
    <string name="edit_user_profile">Editar perfil</string>
    <string name="edit_product_name">Edit product name</string>
    <string name="edit_message">edit message</string>
    <string name="edit_price">edit price</string>
    <string name="edit_description">edit description</string>
    <string name="edit_message2">edit message2</string>
    <string name="save_changes">save changes</string>
    <string name="Delete">delete</string>
    <string name="description1">descr 1</string>
    <string name="description2">descr 2</string>
    <string name="description3">descr 3</string>
    <string name="agenda_username">username</string>
    <string name="agenda_phone">phone</string>
    <string name="enter_sample_text">Enter sample text ...</string>
</resources>
