<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="2"
    android:orientation="vertical" >
    
    
	
	<LinearLayout
	    android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
	    android:orientation="horizontal">
		<!-- Name Label -->
	    <TextView
        android:layout_height="wrap_content"
        android:layout_width="0dip"
        android:layout_weight="1"
        android:paddingLeft="10dip"
        android:paddingRight="10dip"
        android:paddingTop="10dip"
        android:text="username"
        android:textSize="17sp" />
	    
	    <!-- Name Label -->
	    <TextView
        android:layout_height="wrap_content"
        android:layout_width="0dip"
        android:layout_weight="1"
        android:paddingLeft="10dip"
        android:paddingRight="10dip"
        android:paddingTop="10dip"
        android:text="phone"
        android:textSize="17sp" />
	</LinearLayout>
	
	<LinearLayout
	    android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
	    android:orientation="horizontal">
		
	    <!-- Input Name -->
		<EditText 
	    android:id="@+id/inputName"
	    android:layout_width="0dip"
	    android:layout_height="wrap_content"
	    android:layout_weight="1"
	    android:layout_margin="5dip"
	    android:layout_marginBottom="15dip"
	    android:singleLine="true"
	    android:hint="@string/edit_message"/>
	
		<!-- Input Name -->
		<EditText 
	    android:id="@+id/inputName"
	    android:layout_width="0dip"
	    android:layout_height="wrap_content"
	    android:layout_weight="1"
	    android:layout_margin="5dip"
	    android:layout_marginBottom="15dip"
	    android:singleLine="true"
	    android:hint="@string/edit_message"/>	

	    
	</LinearLayout>
    
    
	
	<!-- Price Label -->
    <TextView android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/edit_price"
        android:paddingLeft="10dip"
        android:paddingRight="10dip"
        android:paddingTop="10dip"
        android:textSize="17sp"/>
    
    <!-- Input Price -->
	<EditText android:id="@+id/inputPrice" 
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_margin="5dip"
	    android:layout_marginBottom="15dip"
	    android:singleLine="true"
	    android:inputType="numberDecimal"/>
	
	<!-- Description Label -->
    <TextView android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/edit_description"
        android:paddingLeft="10dip"
        android:paddingRight="10dip"
        android:paddingTop="10dip"
        android:textSize="17sp"/>
    
    <!-- Input description -->
	<EditText android:id="@+id/inputDesc" 
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_margin="5dip"
	    android:layout_marginBottom="15dip"
	    android:lines="4"
	    android:gravity="top"
	    android:hint="@string/edit_message2"/>
	
	<LinearLayout android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal">
	    <!-- Button Create Product -->
	<Button android:id="@+id/btnSave" 
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:text="@string/save_changes"
	    android:layout_weight="1"/>
	
	<!-- Button Create Product -->
	<Button android:id="@+id/btnDelete" 
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:text="@string/Delete"
	    android:layout_weight="1"/>	    
	</LinearLayout>
	
</LinearLayout>