<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"  >
    
     
    
    <LinearLayout
    android:id="@+id/get_agenda_datetime"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"    
    android:background="#50CFCFCF" >
    
    <LinearLayout
    android:id="@+id/get_agenda_datetime"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:background="@drawable/bg_jobscheduler"
    android:padding="5dp"
    android:weightSum="4" >

    <ImageView
       android:id="@+id/agenda_imageprofile"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:layout_weight="1"
        android:contentDescription="@string/profileThumbnail"
        android:src="@drawable/profile_thumbnail" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="3"
        android:orientation="vertical"               
        android:weightSum="2" >
        
        
        <!-- 
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:weightSum="3" >

            <ImageButton
                android:id="@+id/imageButton2"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/bg_jobscheduler"
                android:contentDescription="img" />

            <ImageButton
                android:id="@+id/imageButton3"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/bg_jobscheduler"
                 />

            <ImageButton
                android:id="@+id/imageButton4"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/bg_jobscheduler"
                 />

        </LinearLayout>
         -->
        
        <TextView
            android:id="@+id/agenda_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="left|center"
            android:text="@string/agenda_username" />
        
        <TextView
            android:id="@+id/agenda_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="left|center"
            android:text="@string/agenda_phone" />
        
        <!-- 
        <Button
            android:id="@+id/button1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="button" />
         -->
			<LinearLayout
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"		        
		        android:orientation="horizontal"               
		        android:gravity="right"	 >
        			
			    	<ImageButton
				        android:id="@+id/imageButton1"
				        style="?android:attr/borderlessButtonStyle"
				        android:layout_width="50dp"
				        android:layout_height="wrap_content"
				        	        
				        android:contentDescription="@string/callPhone"				        
				        android:src="@drawable/phoneicon" />
			    	
			    	
			    </LinearLayout>
        

    </LinearLayout>
    
    </LinearLayout>
    
    </LinearLayout>
    
    <LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_below="@+id/get_agenda_datetime"    
    android:orientation="vertical" >

        
    <ListView
        android:id="@android:id/list"
        android:layout_width="fill_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        
         /> 
         <!-- android:divider="@null" -->   
        <!-- http: //stackoverflow.com/questions/4961999/remove-bottom-divider-of-a-android-listview --> 
    	<!-- https: //sriramramani.wordpress.com/2014/03/13/pseudo-selectors/    first-child last-child  -->
    
</LinearLayout>
    

</RelativeLayout>